work in progress

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ bin/
 /.helm/
 /dev/
 tilt_modules/
-
-deploy/gateway/configmap.yaml
-deploy/gateway/oauth.yaml
-deploy/gateway/ingress.yaml
 tilt-options.yaml
+
+deploy/manifests
+deploy/custom/grafana.yaml
+deploy/custom/opni-monitoring.yaml
