--- a/deploy/charts/opni-monitoring/templates/certs.yaml
+++ b/deploy/charts/opni-monitoring/templates/certs.yaml
@@ -56,8 +56,8 @@ spec:
     kind: Issuer
     name: opni-gateway-ca-issuer
   dnsNames:
-    - opni-gateway.opni-gateway.svc.cluster.local
-    - opni-gateway.opni-gateway.svc
+    - opni-gateway.opni-monitoring.svc.cluster.local
+    - opni-gateway.opni-monitoring.svc
     - opni-gateway.svc.cluster.local
 ---
 apiVersion: cert-manager.io/v1
