--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,11 +28,11 @@ jobs:
         with:
           go-version: "1.17.6"
       - name: Install dependencies
-        run: go install github.com/magefile/mage@latest
+        run: go mod download
       - name: Build
-        run: mage
+        run: go run github.com/magefile/mage
       - name: Test
-        run: mage test
+        run: go run github.com/magefile/mage test
       - name: Upload Results To Codecov
         uses: codecov/codecov-action@v1
         with:
