--- a/pkg/test/testdata/cortex/config.yaml
+++ b/pkg/test/testdata/cortex/config.yaml
@@ -7,6 +7,7 @@ tenant_federation:
   enabled: true
 
 server:
+  log_level: error
   http_listen_port: {{ .HttpListenPort }}
   http_tls_config: &tls_server_config
     cert_file: "{{ .StorageDir }}/server.crt"
@@ -18,12 +19,14 @@ server:
 alertmanager:
   alertmanager_client: &tls_client_config
     tls_enabled: true
-    tls_cert_path: "{{ .StorageDir }}client.crt"
-    tls_key_path: "{{ .StorageDir }}client.key"
+    tls_cert_path: "{{ .StorageDir }}/client.crt"
+    tls_key_path: "{{ .StorageDir }}/client.key"
     tls_ca_path: "{{ .StorageDir }}/root.crt"
+    tls_server_name: localhost
 
 querier:
   store_gateway_client: *tls_client_config
+  active_query_tracker_dir: "{{ .StorageDir }}/active-query-tracker"
 
 frontend:
   grpc_client_config: *tls_client_config
@@ -39,6 +42,7 @@ ruler:
   ruler_client: *tls_client_config
   enable_api: true
   enable_sharding: false
+  rule_path: "{{ .StorageDir }}/rules"
 
 distributor:
   shard_by_all_labels: true
