--- a/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
+++ b/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
@@ -27,6 +27,11 @@ data:
         etcd:
           endpoints:
             - etcd:2379
+          certs:
+            serverCA: /run/etcd/certs/server/ca.crt
+            clientCA: /run/etcd/certs/client/ca.crt
+            clientCert: /run/etcd/certs/client/tls.crt
+            clientKey: /run/etcd/certs/client/tls.key
     ---
     apiVersion: v1beta1
     kind: AuthProvider
