--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,7 +43,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Extract metadata for Docker
+      - name: Configure Docker image metadata
+        id: meta
         if: ${{ github.event_name != 'pull_request' }}
         uses: docker/metadata-action@v3
         with:
@@ -63,7 +64,7 @@ jobs:
           context: .
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-      - name: Upload Results To Codecov
+      - name: Upload test results to Codecov
         uses: codecov/codecov-action@v1
         with:
           files: ./cover.out
