--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,9 @@ on:
       - "**.md"
       - ".github/**"
       - "!.github/workflows/build.yaml"
-  pull_request:
+  pull_request_target:
+    branches:
+      - main
     paths-ignore:
       - "**.md"
       - ".github/**"
