--- a/.github/.codecov.yaml
+++ b/.github/.codecov.yaml
@@ -7,3 +7,6 @@ coverage:
           - pkg/* # only include coverage in "pkg/" folder
         informational: true # Always pass check
     patch: off # disable the commit only checks
+ignore:
+  - "**/*.pb*.go"
+  - "pkg/test"
