--- a/pkg/test/testdata/cortex/config.yaml
+++ b/pkg/test/testdata/cortex/config.yaml
@@ -9,6 +9,7 @@ tenant_federation:
 server:
   log_level: error
   http_listen_port: {{ .HttpListenPort }}
+  grpc_listen_port: {{ .GrpcListenPort }}
   http_tls_config: &tls_server_config
     cert_file: "{{ .StorageDir }}/server.crt"
     key_file: "{{ .StorageDir }}/server.key"
