--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -20,7 +20,7 @@ ENV DAPPER_SOURCE /workspace
 ENV DAPPER_OUTPUT bin build/bin dist
 ENV DAPPER_DOCKER_SOCKET true
 ENV DAPPER_ENV TAG REPO GOOS CROSS DRONE_TAG SHORT E2E_USE_EXISTING KUBECONFIG CI DRONE_PULL_REQUEST
-ENV DAPPER_RUN_ARGS "-v opni-build-go16-pkg:/go/pkg -v opni-build-go16-cache:/root/.cache/go-build"
+ENV DAPPER_RUN_ARGS "-v opni-build-go16-pkg:/go/pkg -v opni-build-go16-cache:/root/.cache/go-build -v /home/dbason/git/opni/opni-opensearch-operator:/home/dbason/git/opni/opni-opensearch-operator"
 ENV GOCACHE /root/.cache/go-build
 WORKDIR ${DAPPER_SOURCE}
 
