--- a/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
+++ b/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
@@ -19,7 +19,7 @@ data:
           clientCA: /run/cortex/certs/client/ca.crt
           clientCert: /run/cortex/certs/client/tls.crt
           clientKey: /run/cortex/certs/client/tls.key
-      authProvider: openid
+      authProvider: {{ .Values.auth.provider }}
       certs:
         caCert: /run/opni-monitoring/certs/ca.crt
         servingCert: /run/opni-monitoring/certs/tls.crt
@@ -43,5 +43,13 @@ data:
       type: {{ .Values.auth.provider }}
       options:
     {{- if eq .Values.auth.provider "openid" }}
-        {{ .Values.auth.openid | toYaml | indent 4 }}
+    {{- range $k, $v := .Values.auth.openid }}
+        {{ $k }}: {{ $v }}
     {{- end }}
+    {{- end }}
+    {{- if eq .Values.auth.provider "noauth" }}
+    {{- range $k, $v := .Values.auth.noauth }}
+        {{ $k }}: {{ $v }}
+    {{- end }}
+    {{- end }}
+    
