--- a/deploy/charts/opni-monitoring/templates/gateway-deployment.yaml
+++ b/deploy/charts/opni-monitoring/templates/gateway-deployment.yaml
@@ -62,6 +62,11 @@ spec:
               containerPort: {{ $a._2 }}
               protocol: TCP
           {{- end }}
+          {{- if eq .Values.auth.provider "noauth" }}
+            - name: noauth
+              containerPort: {{ .Values.auth.noauth.port }}
+              protocol: TCP
+          {{- end }}
           livenessProbe:
             httpGet:
               path: /healthz
