--- a/deploy/manifests/00_crds.yaml
+++ b/deploy/manifests/00_crds.yaml
@@ -33695,6 +33695,7 @@ spec:
                 - k3s
                 - rke
                 - rke2
+                - generic
                 type: string
               rke:
                 properties:
