Update opni-monitoring chart with plugin dirs config; test fixes

--- a/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
+++ b/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
@@ -9,6 +9,12 @@ data:
     apiVersion: v1beta1
     kind: GatewayConfig
     spec:
+      plugins:
+        - dirs:
+            - /var/lib/opnim/plugins
+          {{- range $d := .Values.pluginSearchDirs }}
+            - {{ $d }}
+          {{- end }}
       listenAddress: ":{{ .Values.service.port }}"
       management:
         grpcListenAddress: "{{ .Values.management.grpcListenAddress }}"
