Fix helm charts

--- a/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
+++ b/deploy/charts/opni-monitoring/templates/gateway-configmap.yaml
@@ -10,11 +10,11 @@ data:
     kind: GatewayConfig
     spec:
       plugins:
-        - dirs:
-            - /var/lib/opnim/plugins
-          {{- range $d := .Values.pluginSearchDirs }}
-            - {{ $d }}
-          {{- end }}
+        dirs:
+          - /var/lib/opnim/plugins
+        {{- range $d := .Values.pluginSearchDirs }}
+          - {{ $d }}
+        {{- end }}
       listenAddress: ":{{ .Values.service.port }}"
       management:
         grpcListenAddress: "{{ .Values.management.grpcListenAddress }}"
