--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.17.6"
+          stable: false
+          go-version: "1.18.0-beta2"
       - name: Install dependencies
         run: go mod download
       - name: Build
